--- a/src/systems/ec/implementations/vanilla/packages/ec-component-site-header-harmonised/ec-component-site-header-harmonised.scss
+++ b/src/systems/ec/implementations/vanilla/packages/ec-component-site-header-harmonised/ec-component-site-header-harmonised.scss
@@ -78,6 +78,12 @@
     }
   }
 
+  .ecl-site-header-harmonised__search-icon {
+    height: $ecl-icon-s;
+    margin-bottom: 0.25rem;
+    width: $ecl-icon-s;
+  }
+
   .ecl-site-header-harmonised__login-toggle {
     .ecl-site-header-harmonised__login-arrow {
       display: none;
