--- a/src/systems/ec/implementations/vanilla/packages/ec-component-site-header-standardised/ec-component-site-header-standardised.scss
+++ b/src/systems/ec/implementations/vanilla/packages/ec-component-site-header-standardised/ec-component-site-header-standardised.scss
@@ -76,6 +76,12 @@
     }
   }
 
+  .ecl-site-header-standardised__search-icon {
+    height: $ecl-icon-s;
+    margin-bottom: 0.25rem;
+    width: $ecl-icon-s;
+  }
+
   .ecl-site-header-standardised__login-toggle {
     .ecl-site-header-standardised__login-arrow {
       display: none;
